chamber/styles/small.css
/* -------------------------25 - Color Scheme choices -------------------------*/
:root {

  /* backgrounds */
  --header-section-hd: rgb(44, 39, 93);
  --section-bg: rgb(70, 127, 129);
  --footer: rgb(227, 243, 249);
  --section-faded: rgba(227, 243, 249, 0.5);


  /* Text */
  --white-text: #fff;
  --black-text: #000;
}

/* -------------------------25 - SITE WIDE ------------------------- */
* {
  /* google font */
  font-family: 'Roboto', sans-serif;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.main-page {
  margin: 0 1rem;
}

/* -------------------------25 - HEADER  ------------------------- */
header {
  display: grid;
  grid-template-columns: 44px auto 44px;
  padding: 5px 0 5px 10px;
  border: solid 1px #ddd;
  /* above: light gray */
  column-gap: 8px;
  /* above: small gap between grid cells */
  align-items: center;
  /* above: pushes items to the vertical center */
  background-color: var(--header-section-hd);
  color: var(--white-text);
  /* code below: allows the header to not scroll and float above other content as scrolls */
  position: sticky;
  top: 0;
  z-index: 1000;
  /* keeps it above content */
}

header img {
  display: block;
  width: 100%;
  height: auto;
}

header span {
  font-size: 1.2rem;
}

/* -------------------------25 HAMBURGER ------------------------- from WDD231-not checked*/
.hamburger {
  background: none;
  border: none;
  cursor: pointer;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  /* above: this font is used to increase the size of "x" */
  padding-bottom: 0.5rem;
  /* above: vertically centers the hamburger button */
  color: var(--white-text)
}

.hamburger::before {
  content: "\2630";
  font-size: 2rem;
  color: var(--white-text)
}

.hamburger.show::before {
  content: "\00D7";
}

/* ------------------------- NAVIGATION ------------------------- */
.navigation {
  display: none;
  grid-column: 1/-1;
  text-align: center;
}

.navigation.show {
  display: block;
}

.navigation ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  /* all <ul>elements come with preset padding and margins, so we want to get rid of them */
}

.navigation li {
  height: 44px;
}

.navigation a {
  display: block;
  /* <a> elements default to inline */
  padding: 0.8rem 10px;
  /* above: large enough for finger touch (check with inspect-44px), and padding L/R to match header padding */
  color: var(--white-text);
  text-decoration: none;
  border-top: solid 1px lightgray;
  cursor: pointer;
}

.navigation a:hover {
  background-color: var(--section-bg);
}

/* below: wayfinding effect-light grey background for a li element with a class of "current" */
.navigation li.current a {
  background-color: yellow;
  color: black;
}


/* -------------------------25 -  BODY AND SECTIONS ------------------------- */
.hero img,
.directory-hero img {
  display: block;
  width: 100%;
  height: 100%;
}

/*-------------------------25 JOIN US SECTION------------------------- */
.join-section {
  background-color: var(--section-bg);
  display: flex;
  flex-direction: column;
  color: var(--white-text);
  margin-top: 0.5rem;
}

.join-picture {
  position: relative;
}

.join-picture img {
  width: 100%;
  height: auto;
  max-width: 500px;
}

.join-picture p {
  font-size: 50px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.join-button-div {
  text-align: center;
  padding: 20px;
}

.join-button-div h2 {
  font-size: 1.5rem;
  padding-top: 30px
}

.join-button-div p {
  padding-top: 40px
}

.join-button-div button {
  padding: 15px 30px;
  border-radius: 30px;
  font-size: 1.6rem;
  margin: 40px 0;
}

/* -------------------------25 -  EVENTS & WEATHER SECTIONS ------------------------- */
.events-weather {
  margin-top: 2rem;
}

.events-weather .updates-h2 {
  color: var(--black-text);
  background-color: var(--white-text);
  text-align: center;
  grid-column: 1/-1;
}

.events-weather h2 {
  background-color: var(--header-section-hd);
  color: var(--white-text);
  text-align: center;
  padding: 0.2rem;
}

.image-overlay,
.directory-image-overlay {
  position: relative;
}

.overlay {
  background-color: var(--section-faded);
  border: 1px solid black;
  position: absolute;
  top: 20px;
  left: 50%;
  transform: translate(-50%, 0);
  font-size: 1rem;
  padding: 0.5rem 0.5rem;
  width: 100%;
  text-align: center;
}

.directory-overlay {
  position: absolute;
  font-size: 0.9rem;
  font-weight: bolder;
  top: 15px;
  left: 50%;
  transform: translate(-50%, 0);
  width: 200px;
  text-align: center;
}


/* ---------------------- weather section --------------------- */
.weather {
  display: grid;
  grid-template-columns: 1fr 2fr;
}

.weather h2 {
  grid-column: 1/-1;
}

#graphic {
  grid-column: 1/2;
  width: 100%;
}

.weather p {
  line-height: 1.5rem;
  grid-column: 2/3;
  font-size: 0.9rem;
}

.forecast p {
  padding: 0.5rem 0;
}

.events,
.weather,
.forecast {
  background-color: var(--section-bg);
  color: var(--white-text);
  margin-bottom: 0.5rem;
}

#events,
#weather,
#forecast {
  padding: 0.5rem
}



/* -------------------------25 -  BUSINESS CARDS ------------------------- */
.card-button-div {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  margin-top: 2rem;
  margin-bottom: 0;
  height: 44px;
}

.card-button-div h1 {
  margin: 0;
  padding: 0;
}

.card-button {
  height: 44px;
}

.card-button::before {
  content: "view as list";
}

.card-button.list::before {
  content: "view as cards";
}

.cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
  gap: 0.5rem;
  margin-top: 0.2rem;
}

.card {
  display: grid;
  grid-template-columns: 1fr 2fr;
  background-color: var(--section-bg);
  color: var(--white-text);
  border: 1px solid darkgray;
  border-radius: 10px;
  padding-top: 0.3rem;
}

.card h2 {
  font-size: 1.1rem;
  text-align: center;
  grid-column: 1/-1;
}

.card .tagline {
  font-size: 0.8rem;
  text-align: center;
  border-bottom: solid 1px var(--white-text);
  grid-column: 1/-1;
  padding-bottom: 0.2rem;
}

.card img {
  /* width: 100px;
  max-width: 100px;
  height: auto; */
  display: block;
  padding: 0.3rem;
  border-radius: 10px;
  justify-self: center;
  align-self: center;
}

.card #contact {
  padding: 0.5rem 0.5rem 0 0.5rem;
}

.card #contact p,
.card #contact a {
  text-align: left;
  font-size: 0.8rem;
  padding: 0.2rem 0;
}

.card #contact a {
  text-decoration: none;
  color: yellow;
  padding: 15px 0;
}

#contact a.list {
  color: blue;
}

.card #contact a:hover {
  cursor: pointer;
}

/* -------------------------25 CARDS IN LIST VIEW ------------------------- */
.cards.list {
  display: block;
}

.cards.list .card {
  display: block;
  background-color: var(--white-text);
  color: var(--black-text);
  border: none;
  padding-top: 1rem;
}

.cards.list h2 {
  text-align: left;
}

/* -------------------------25 SPOTLIGHT CARDS ------------------------- */

.spotlight-cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
  gap: 0.5rem;
  margin-top: 0.2rem;
}

.sCard {
  display: grid;
  grid-template-columns: 1fr 2fr;
  background-color: var(--section-bg);
  color: var(--white-text);
  border: 1px solid darkgray;
  border-radius: 10px;
  padding-top: 0.3rem;
}

.spotlight-cards h2 {
  color: var(--black-text);
  text-align: center;
  grid-column: 1/-1;
}

.sCard h3 {
  text-align: center;
  grid-column: 1/-1;
  padding-bottom: 0.5rem;
  border-bottom: 1px solid white;
}

.sCard img {
  display: block;
  width: 100%;
  height: auto;
  padding: 0.3rem;
  justify-self: center;
  align-self: center;
  background-color: var(--footer);
  border-radius: 20px;
  margin-left: 0.5rem;
}

/* selecting only one image because it has white lettering */
.sCard img[src*="golf"] {
  background-color: darkgray;
  /* darker background for white logo */
}

.sCard #contact {
  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
  height: 90px;
}

.sCard #contact p,
.sCard #contact a {
  text-align: left;
  font-size: 0.8rem;
  padding: 0.2rem 0;
}

.sCard #contact a {
  color: yellow;
  text-decoration: none;
  padding: 15px 0;
}

.sCard .gold {
  grid-column: 1/-1;
  color: black;
  background-color: gold;
  text-align: center;
  padding-top: 0.2rem;
  padding-bottom: 0.2rem;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.sCard .silver {
  grid-column: 1/-1;
  color: black;
  background-color: silver;
  text-align: center;
  padding-top: 0.2rem;
  padding-bottom: 0.2rem;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

/* -------------------------25 FOOTER ------------------------- */
footer {
  display: grid;
  gap: 1rem;
  margin: 1rem 0;
  grid-column: 1/4;
  background-color: var(--footer);
  color: var(--light-text);
  padding: 1rem;
}

.social {
  justify-self: center;
}

footer p {
  text-align: left;
  line-height: 1.3;
}

.social a {
  padding: 0 0.5rem;
}

#lastModified {
  font-size: 14px;
}

